# gcpvalidate

./: Cargo.toml
goversion/: go.mod  go.sum  main.go
src/: main.rs
