[package]
name = "gcp_credentials_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = "4.5.20"
futures = "0.3.31"
hyper = "1.5.0"
hyper-rustls = "0.27.3"
hyper-util = "0.1.10"
indicatif = "0.17.8"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
walkdir = "2.5.0"
yup-oauth2 = "11.0.0"
